--- a/client/src/CSS/AdminCSS/AdminSettings/AdminNotificationsComponent.css
+++ b/client/src/CSS/AdminCSS/AdminSettings/AdminNotificationsComponent.css
@@ -8,7 +8,7 @@
 }
   
 .admin-notifications-order .admin-notifications-order h2{
-    font-size: 1.8rem;
+    font-size: 1.2rem;
     color: #333;
     text-align: center;
     margin-bottom: 20px;
@@ -27,7 +27,7 @@
 }
   
 .admin-notifications-order .notification-category-order h3{
-    font-size: 1.4rem;
+    font-size: 1rem;
     color: #555;
     border-bottom: 1px solid #ddd;
     padding-bottom: 8px;
@@ -36,7 +36,7 @@
   
 .admin-notifications-order .notification-item-order{
     margin: 10px 0;
-    font-size: 1rem;
+    font-size: 12px;
     color: #444;
     transition: background-color 0.3s, box-shadow 0.3s;
 }
