--- a/client/src/CSS/StaffCSS/StaffPayment.css
+++ b/client/src/CSS/StaffCSS/StaffPayment.css
@@ -1,6 +1,6 @@
 .staff-payment-container{
-    display: flex;
-    justify-content: space-between;
+    /* display: flex;
+    justify-content: space-between; */
     padding: 50px 0;
 }
 .staff-shop-content-header{
